# pycjson

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: unittest.yml
buildScripts/: config.json  generate.py  prologue
buildScripts/amalgamation/: amalgamation.py  cpp_process.py
src/: dconv_wrapper.cpp  dconv_wrapper.h  init.c  pycJSON.h  pycJSON_decode.c  pycJSON_encode.c  simdutf_wrapper.cpp  simdutf_wrapper.h  str-utils.c  str-utils.h  str.c  str.h  version_template.h
src/test/: encode_test.py
test/: all_test.py  benchmark_test.py  decode_test.py  encode_test.py  file_test.py  fuzz_test.py  memory_test.py  test_utils.py
